dtor/tests/errors/dtor_bad_nesting.stderr
error: Unexpected meta attribute: 'ctor (link_section = ".ctors", used(linker))'
       ...expected one of:
       anonymous; crate_path = $path : pat;
       ctor(link_section = $ctor_link_section_name : literal); link_section =
       $section : literal; method = $method_id : ident; unsafe; used(linker);
 --> tests/errors/dtor_bad_nesting.rs:3:1
  |
3 | #[dtor(unsafe, link_section = ".dtors", ctor(link_section = ".ctors", used(linker)))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__extract_meta` which comes from the expansion of the attribute macro `dtor` (in Nightly builds, run with -Z macro-backtrace for more info)
